# classic-scheduler

./: .gitignore  README  README.md  pyproject.toml  setup.cfg
sources/classic/scheduler/: __init__.py  decorators.py  scheduler.py  task.py
tests/: conftest.py  test_decorators.py  test_scheduler.py
