[build-system]
requires = [
    "setuptools >= 40.6.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "classic-scheduler"
version = "1.3.2"
authors = [
    {name = "Sergei Variasov", email = "variasov@gmail.com"},
    {name = "Vasiliy Pichugin", email = "pichugin_v_i@mail.ru"},
]
description = "Simple in-process scheduler"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "croniter~=3.0",
]

[project.optional-dependencies]
dev = [
    "build~=1.2.2.post1",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "isort==6.0.0",
    "yapf==0.43.0",
    "flake8==7.1.1",
    "Flake8-pyproject==1.2.3",
]

[tool.setuptools.packages.find]
where = ["sources"]
