[metadata]
name = classic-scheduler
version = 1.0.0
description = Provides scheduler
author = Sergei Variasov, Vasiliy Pichugin
author_email = variasov@gmail.com, pichugin_v_i@mail.ru
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/variasov/classic-scheduler
project_urls =
    Bug Tracker = https://github.com/variasov/classic-scheduler/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta


[options]
packages = find_namespace:
python_requires = >=3.10
install_requires =
    croniter~=3.0
package_dir =
    = sources


[options.packages.find]
where = sources

[options.extras_require]
dev =
    pytest~=6.2
    pytest-cov~=2.12
    twine~=3.4
    build~=0.7
